<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".resultActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="0dp"
        android:background="@color/background">
        <com.google.android.material.appbar.MaterialToolbar
            app:title="About"
            app:titleCentered="true"
            app:titleTextColor="@color/texte_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/cars_backround"
        app:strokeWidth="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/qx"
                android:layout_width="76dp"
                android:layout_height="54dp"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/todo"></ImageView>
            <TextView
                android:id="@+id/text_reslutat"
                android:layout_marginTop="15dp"
                android:textColor="@color/texte_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/deviner_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/result_res"
                android:textColor="@color/text_secondery_color"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@color/cars_backround"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/developers"
                android:textColor="@color/texte_color"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/qd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dafiane_seif_chaieb_mazen"
                android:textColor="@color/text_secondery_color"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"></TextView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rtnhome"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="25dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/cars_backround"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="159dp"
            android:layout_height="56dp"

            android:orientation="vertical"
            tools:ignore="VisualLintBounds">

            <TextView
                android:id="@+id/r_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/homepage"
                android:layout_gravity="center"
                android:textColor="@color/texte_color"
                android:textSize="17sp"
                android:textStyle="bold"></TextView>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>