<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1160">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:srcCompat="@drawable/top_img"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="450dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="405dp"
                    android:layout_height="290dp"
                    android:layout_marginTop="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="330dp"
                        android:layout_height="300dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.493"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/background"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/mot"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/top_item_background"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/circle_background">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="32dp"
                                android:layout_height="35dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/alphabet" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/devinette_des_mots"
                            android:textAlignment="center"
                            android:textColor="#0027c4"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/nbr"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/top_item_background"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/circle_background">

                            <ImageView
                                android:id="@+id/img_mots"
                                android:layout_width="38dp"
                                android:layout_height="44dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/klk"
                                tools:ignore="ContentDescription" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/txt_nbr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/devinette_des_nombres"
                            android:textAlignment="center"
                            android:textColor="#0027c4"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/quizz"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0.333"
                        android:background="@drawable/top_item_background"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="15dp"
                            android:background="@drawable/circle_background">

                            <ImageView
                                android:id="@+id/img_nbr"
                                android:layout_width="35dp"
                                android:layout_height="39dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/quiiz" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/txt_quiz"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/quiz"
                            android:textAlignment="center"
                            android:textColor="#0027c4"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button5"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="223dp"
                    android:layout_height="61dp"
                    android:background="@drawable/circle_button"
                    android:text="About App"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="269dp"
                    android:layout_height="213dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/button5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:layout_marginTop="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/name_player"
                            android:textColor="#ffffff"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:hint="votre nom"
                            android:inputType="text"
                            tools:ignore="TouchTargetSizeCheck" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="113dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/score"
                            android:textColor="#ffffff"
                            android:layout_marginTop="8dp"
                            android:textSize="22sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="clean Score" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>